--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ repositories {
 }
 
 dependencies {
-compile "com.github.jsimone:webapp-runner:8.5.5.0"
+    compile 'org.grails.plugins:rendering:2.0.3'
+    compile "com.github.jsimone:webapp-runner:8.5.5.0"
     compile 'org.grails.plugins:rendering:2.0.3'
     compile "org.grails.plugins:spring-security-core:3.2.1"
     compile "org.springframework.boot:spring-boot-starter-logging"
