--- a/build.gradle
+++ b/build.gradle
@@ -53,12 +53,14 @@ dependencies {
     compile "org.hibernate:hibernate-core:5.1.5.Final"
     compile "org.grails.plugins:gsp"
     compile "org.grails.plugins:excel-import:3.0.0.RC6"
+    compile "org.grails.plugins:rendering:2.0.0-SNAPSHOT"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime "com.h2database:h2"
     runtime "org.apache.tomcat:tomcat-jdbc"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.8"
+    runtime "org.springframework:spring-test:4.2.1.RELEASE"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails:grails-web-testing-support"
     testCompile "org.grails.plugins:geb:1.1.2"
