--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile "org.grails.plugins:gsp"
     compile "org.grails.plugins:excel-import:3.0.0.RC6"
     compile "org.grails.plugins:rendering:2.0.0-SNAPSHOT"
+    compile 'org.grails.plugins:remote-pagination:0.5.0'
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
