--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,11 @@ dependencies {
     compile "org.hibernate:hibernate-core:5.1.5.Final"
     compile "org.grails.plugins:gsp"
     compile "org.grails.plugins:excel-import:3.0.0.RC6"
+    compile 'org.grails.plugins:excel-export:2.1'
     compile "org.grails.plugins:rendering:2.0.0-SNAPSHOT"
     compile 'org.grails.plugins:remote-pagination:0.5.0'
+    compile 'com.jameskleeh:excel-builder:0.4.2'
+    compile group: 'stax', name: 'stax', version: '1.2.0'
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
